--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
-name = "py-mono-build"
+name = "py_mono_build"
 version = "0.1.0"
 description = ""
 authors = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]
 packages = [
-    { include = "py-mono-build", from = "lib" }
+    { include = "py_mono_build", from = "src" }
 ]
 
 [tool.poetry.dependencies]
