--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,16 @@ packages = [
     { include = "py_mono_build", from = "src" }
 ]
 
+[tool.poetry.scripts]
+mono-build = "py_mono_build.main:cli"
+
 [tool.poetry.dependencies]
 python = "^3.9"
 
-Jinja2 = "^3.1.2"
-tomli = "^2.0.1"
-click = "^8.1.3"
+Jinja2 = "^3"
+tomli = "^2"
+click = "^8"
+black = "^22"
 
 
 [tool.poetry.dev-dependencies]
