--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ pylint = "^2"
 
 [tool.poetry.dev-dependencies]
 pydevd-pycharm = "~=222.3739.56"
+pytest = "^7.1.3"
 
 [tool.isort]
 profile = "black"
