--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,19 +4,30 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "py_mono_build"
-version = "0.1.0"
-description = ""
+version = "0.0.1"
+description = "A CLI designed to make it easier to work in a python mono repo"
+license = "GPL-3.0-or-later"
 authors = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]
+maintainers = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]
+readme = "README.md"
+#homepage = ""
+#repository = ""
+#documentation = ""
+keywords = ["build", "mono-repo", "cli"]
+classifiers = [
+    "Topic :: Software Development :: Build Tools",
+]
+
 packages = [
     { include = "py_mono_build", from = "src" }
 ]
 
 [tool.poetry.scripts]
-mono-build = "py_mono_build.main:cli"
+py_mono_build = "py_mono_build.main:cli"
 pmb = "py_mono_build.main:cli"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.7"
 
 bandit = "^1"
 black = "^22"
@@ -31,7 +42,6 @@ pylint = "^2"
 
 
 [tool.poetry.dev-dependencies]
-pydevd-pycharm = "~=222.3739.56"
 pytest = "^7.1.3"
 
 [tool.isort]
