--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ license = "GPL-3.0-or-later"
 authors = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]
 maintainers = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]
 readme = "README.md"
-#homepage = ""
-#repository = ""
+homepage = "https://github.com/peterHoburg/py-mono-build"
+repository = "https://github.com/peterHoburg/py-mono-build"
 #documentation = ""
 keywords = ["build", "mono-repo", "cli"]
 classifiers = [
