--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ py_mono_build = "py_mono_build.main:cli"
 pmb = "py_mono_build.main:cli"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 
 bandit = "^1"
 black = "^22"
@@ -43,8 +43,13 @@ pydocstyle = {extras = ["toml"], version = "^6"}
 pylint = "^2"
 
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
+
+
+[tool.poetry.group.docs.dependencies]
+mkdocs-material = "^8.4.2"
+mkdocs-minify-plugin = "^0.5.0"
 
 [tool.isort]
 profile = "black"
