--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,5 +13,5 @@ jobs:
         with:
           python-version: 3.8
       - run: pip install poetry
-      - run: poetry install --group docs
+      - run: poetry install --only docs
       - run: mkdocs gh-deploy --force
