--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,10 +2,9 @@ name: docs
 on:
   push:
     branches:
-      - master
       - main
 jobs:
-  deploy:
+  docs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -14,4 +13,4 @@ jobs:
           python-version: 3.8
       - run: pip install poetry
       - run: poetry install --only docs
-      - run: mkdocs gh-deploy --force
+      - run: poetry run mkdocs gh-deploy --force
