--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ pytest = "^7.1.3"
 [tool.poetry.group.docs.dependencies]
 mkdocs-material = "^8.4.2"
 mkdocs-minify-plugin = "^0.5.0"
+mkdocs-click = "^0.8.0"
 
 [tool.isort]
 profile = "black"
