--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,5 +12,5 @@ jobs:
         with:
           python-version: 3.8
       - run: pip install poetry
-      - run: poetry install --only docs
+      - run: poetry install --with docs
       - run: poetry run mkdocs gh-deploy --force
