--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,26 +31,25 @@ pmt = "py_mono_tools.main:cli"
 [tool.poetry.dependencies]
 python = "^3.8"
 
-bandit = "^1"
-black = "^22"
 click = "^8"
-flake8 = "^5"
-isort = "^5"
-Jinja2 = "^3"
-mypy = "^0.971"
-pydocstringformatter = "^0.7"
-pydocstyle = {extras = ["toml"], version = "^6"}
-pylint = "^2"
-
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
-
 
 [tool.poetry.group.docs.dependencies]
 mkdocs-material = "^8.4.2"
 mkdocs-minify-plugin = "^0.5.0"
 mkdocs-click = "^0.8.0"
+
+[tool.poetry.group.linters_python.dependencies]
+bandit = "^1.7.4"
+black = "^22.8.0"
+flake8 = "^5.0.4"
+isort = "^5.10.1"
+mypy = "^0.971"
+pydocstringformatter = "^0.7.2"
+pydocstyle = {extras = ["toml"], version = "^6.1.1"}
+pylint = "^2.15.2"
 
 [tool.isort]
 profile = "black"
