--- a/test/test_docker_module/requirements.txt
+++ b/test/test_docker_module/requirements.txt
@@ -1,33 +1,2 @@
-astroid==2.12.5; python_full_version >= "3.7.2"
-bandit==1.7.4; python_version >= "3.7"
-black==22.6.0; python_full_version >= "3.6.2"
-click==8.1.3; python_version >= "3.7"
-colorama==0.4.5; platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.7.2" and sys_platform == "win32"
-dill==0.3.5.1; python_full_version >= "3.7.2"
-flake8==5.0.4; python_full_version >= "3.6.1"
-gitdb==4.0.9; python_version >= "3.7"
-gitpython==3.1.27; python_version >= "3.7"
-isort==5.10.1; python_full_version >= "3.6.1" and python_version < "4.0"
-jinja2==3.1.2; python_version >= "3.7"
-lazy-object-proxy==1.7.1; python_version >= "3.6" and python_full_version >= "3.7.2"
-markupsafe==2.1.1; python_version >= "3.7"
-mccabe==0.7.0; python_version >= "3.6" and python_full_version >= "3.7.2"
-mypy-extensions==0.4.3; python_full_version >= "3.6.2" and python_version >= "3.6"
-mypy==0.971; python_version >= "3.6"
-pathspec==0.10.0; python_version >= "3.7" and python_full_version >= "3.6.2"
-pbr==5.10.0; python_version >= "3.8"
-platformdirs==2.5.2; python_version >= "3.7" and python_full_version >= "3.7.2"
-pycodestyle==2.9.1; python_version >= "3.6" and python_full_version >= "3.6.1"
-pydocstringformatter==0.7.2; python_version >= "3.8"
-pydocstyle==6.1.1; python_version >= "3.6"
-pyflakes==2.5.0; python_version >= "3.6" and python_full_version >= "3.6.1"
-pylint==2.15.0; python_full_version >= "3.7.2"
-pyyaml==6.0; python_version >= "3.7"
-smmap==5.0.0; python_version >= "3.7"
-snowballstemmer==2.2.0; python_version >= "3.6"
-stevedore==4.0.0; python_version >= "3.8"
-toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version >= "3.3.0"
-tomli==2.0.1; python_full_version < "3.11.0a7" and python_full_version >= "3.7.2" and python_version >= "3.8" and python_version < "3.11"
-tomlkit==0.11.4; python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.7.2"
-typing-extensions==4.3.0; python_version < "3.10" and python_full_version >= "3.7.2" and python_version >= "3.7"
-wrapt==1.14.1
+py-mono-tools[linters-python]>=0.0.13
+
