--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          ref: 'main'
 
       - uses: actions/setup-python@v2
         with:
@@ -52,6 +54,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          ref: 'main'
 
       - uses: actions/setup-python@v2
         with:
@@ -70,7 +74,11 @@ jobs:
     needs: tag_release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: 'main'
+
       - uses: actions/setup-python@v2
         with:
           python-version: 3.10.7
