--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,20 @@ readme = "README.md"
 homepage = "https://peterhoburg.github.io/py_mono_tools/"
 repository = "https://github.com/peterHoburg/py_mono_tools"
 documentation = "https://peterhoburg.github.io/py_mono_tools/"
-keywords = ["build", "mono-repo", "cli"]
+keywords = [
+    "build", "tools",
+    "monorepo", "cli",
+    "py-mono-tools", "py mono tools", "py_mono_tools",
+]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Environment :: Console",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Topic :: Software Development",
     "Topic :: Software Development :: Build Tools",
+    "Topic :: Utilities",
+    "Typing :: Typed",
 ]
 
 packages = [
@@ -45,7 +54,7 @@ pytest = "^7.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
-pydevd-pycharm = "^222.4167.4"
+pydevd-pycharm = "^222"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs-material = "^8.4.2"
@@ -53,7 +62,7 @@ mkdocs-minify-plugin = "^0.5.0"
 mkdocs-click = "^0.8.0"
 
 [tool.poetry.extras]
-linters-python = ["bandit", "black", "flake8", "isort", "mypy","pydocstringformatter", "pydocstyle[toml]", "pylint"]
+linters-python = ["bandit", "black", "flake8", "isort", "mypy", "pydocstringformatter", "pydocstyle[toml]", "pylint"]
 
 
 
