--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,13 +62,13 @@ jobs:
           python-version: 3.10.7
 
       - name: Install Poetry
-        run: pip install poetry
+        run: pip install poetry py-mono-tools
 
       - name: Configure poetry
         run: poetry config pypi-token.pypi ${{ secrets.POETRY_PYPI_TOKEN_PYPI }}
 
       - name: Build and publish package
-        run: poetry publish --build
+        run: pmt -n py_mono_tools deploy
 
   docs:
     needs: tag_release
