--- a/example_repos/docker_module/Dockerfile
+++ b/example_repos/docker_module/Dockerfile
@@ -15,7 +15,7 @@ ENV PATH "/home/default/.local/bin:$PATH"
 FROM base as builder
 
 RUN python -m venv $VIRTUALENV_PATH
-RUN pip install poetry
+RUN pip install --no-cache-dir poetry==1.2
 
 COPY --chown=default:default pyproject.toml  .
 COPY --chown=default:default poetry.lock  .
@@ -27,14 +27,14 @@ RUN if [ "$INSTALL_DEV_DEPS" = "true" ] ; then . $VIRTUALENV_PATH/bin/activate &
 
 COPY --chown=default:default . .
 
-RUN . $VIRTUALENV_PATH/bin/activate && poetry install -n --without dev
+RUN . $VIRTUALENV_PATH/bin/activate && poetry install -n --only-root
 
 
 FROM base as final
 
 
 COPY --chown=default:default --from=builder "$VIRTUALENV_PATH" "$VIRTUALENV_PATH"
-COPY --chown=default:default --from=builder /opt /opt
+COPY --chown=default:default --from=builder . .
 
 
 ENTRYPOINT ["/bin/bash", "./entrypoint.sh"]
