--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,30 +43,35 @@ python = "^3.8"
 click = "^8"
 
 # linters-python
-bandit = "^1.7.4"
-black = "^22.8.0"
-flake8 = "^5.0.4"
-isort = "^5.10.1"
-mypy = "^0.971"
-pydocstringformatter = "^0.7.2"
-pydocstyle = {extras = ["toml"], version = "^6.1.1"}
-pylint = "^2.15.2"
+bandit = "^1"
+black = "^22"
+flake8 = "^5"
+isort = "^5"
+mypy = "^0"
+pydocstringformatter = "^0.7"
+pydocstyle = {extras = ["toml"], version = "^6"}
+pylint = "^2"
 
 # testers-python
-pytest = "^7.1.3"
+pytest = "^7"
 
 
 [tool.poetry.group.dev.dependencies]
 pydevd-pycharm = "^222"
 
 [tool.poetry.group.docs.dependencies]
-mkdocs-material = "^8.4.2"
-mkdocs-minify-plugin = "^0.5.0"
-mkdocs-click = "^0.8.0"
+mkdocs-material = "^8"
+mkdocs-minify-plugin = "^0"
+mkdocs-click = "^0"
 
 [tool.poetry.extras]
-linters-python = ["bandit", "black", "flake8", "isort", "mypy", "pydocstringformatter", "pydocstyle[toml]", "pylint"]
-testers-python = ["pytest"]
+python = ["bandit", "black", "flake8", "isort", "mypy", "pydocstringformatter", "pydocstyle[toml]", "pylint", "pytest"]
+
+python-linters = ["bandit", "black", "flake8", "isort", "mypy", "pydocstringformatter", "pydocstyle[toml]", "pylint"]
+python-testers = ["pytest"]
+
+
+all = ["bandit", "black", "flake8", "isort", "mypy", "pydocstringformatter", "pydocstyle[toml]", "pylint", "pytest"]
 
 
 [tool.isort]
