More testing vagrant fun times.

--- a/example_repos/docker_module/playbook.yml
+++ b/example_repos/docker_module/playbook.yml
@@ -30,5 +30,5 @@
     - name: Install project using Poetry
       become: yes
       become_user: "{{ main_user }}"
-      ansible.builtin.command: poetry install
+      ansible.builtin.command: /home/{{ main_user }}/.local/bin/poetry install
 
