--- a/example_repos/docker_module/pyproject.toml
+++ b/example_repos/docker_module/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "docker_module", from="src"}]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-py-mono-tools = {extras = ["python-linters"], version = "^0"}
+py-mono-tools = {path = "../../../py_mono_tools", develop = true, extras = ["python-linters"]}
 
 
 [build-system]
